# DietMicrobeNet

./: .gitignore  CHANGELOG.md  CITATION.cff  DMnet_env.yaml  LICENSE  README.md  Snakefile  pyproject.toml  run_workflow.py  versions.json
.github/workflows/: mkdocs.yml  unit_testing.yml
1.0.10/: 404.html  index.html  sitemap.xml
1.0.10/CHANGELOG/: index.html
1.0.10/installation/: index.html
1.0.10/intersample_comp/: index.html
1.0.10/metabolome_comp/: index.html
1.0.10/output/: index.html
1.0.10/quickstart/: index.html
1.0.10/search/: search_index.json
1.0.10/usage/: index.html
1.0.11/: 404.html  index.html  sitemap.xml
1.0.11/CHANGELOG/: index.html
1.0.11/installation/: index.html
1.0.11/intersample_comp/: index.html
1.0.11/metabolome_comp/: index.html
1.0.11/output/: index.html
1.0.11/quickstart/: index.html
1.0.11/search/: search_index.json
1.0.11/usage/: index.html
1.0.7/: 404.html  index.html  sitemap.xml
1.0.7/CHANGELOG/: index.html
1.0.7/installation/: index.html
1.0.8/: 404.html  index.html  sitemap.xml
1.0.9/: 404.html  index.html  sitemap.xml
1.2.0/: 404.html  index.html  sitemap.xml
CompoundQueries/: comp_FoodDB.R
Data/: Example_GraphComparison_Metadata.csv
FetchFood/: get_FooDB_food.py  get_KEGG_food.py  get_all_kegg_orgs.py
docs-site/: mkdocs.yml  requirements.txt
src/: CompoundAnalysis_Microbes.Rmd  GraphComparison.py  GraphResults_Report.Rmd  MetabolomeComparison_Report.Rmd  RenderCompoundAnalysis_Microbe.py  RenderGraphResults_Report.py  RenderMetabolomeComparison.py  get_foods.py  run_Neo4j.py
(+83 files in other folders)
